--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <form class="form container">
-        <div class="left">
+        <section class="left">
             <img class="logo" src="/img/logo.svg">
             <img class="bg" src="/img/bg.jpg">
-        </div>
-        <div class="right">
+        </section>
+        <section class="right">
             <h2 class="title_header_form">Get iintoo it today</h2>
             <p class="text_header_form">There is no charge or obligation upon registration</p>
             <div class="buttons">
@@ -28,7 +28,7 @@
                 </div>
                 
         </div>
-        <div class="inputName">
+        <section class="input_name">
             <div class="email">
         <div class="text-field text-field_floating">
             <input class="text-field__input" type="email" id="email">
@@ -40,12 +40,12 @@
             <input class="text-field__input" type="phone" id="phone">
             <label class="text-field__label" for="phone">Phone</label>
           </div>
-        </div>
-        </div>
+          </div>
+        </section>
         <div class="body_form">
             <h2 class="title_body_form">What type of investor are you?</h2>
             <p class="text_body_form">Select the type of investor you are below.</p>
-            <div class="radio_button">
+            <fieldset class="radio_button">
                 <div>
                     <input type="radio" name="one" id="individual">
                     <label for="radio1">Individual</label>
@@ -67,7 +67,7 @@
                     <img class="icon-information" src="/img/7.png">
                 </div>
             
-                </div>
+                </fieldset>
                 <div class="information">
                     <p class="text_information">I am a natural person ivesting on my own behalf as a sole owner, joint tenant,
                         or tenant in common.
@@ -81,7 +81,7 @@
                     Create Account
                 </button>
             </div>
-        </div>
+        </section>
     </form>
 </body>
 </html>
