--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
                 <div>
                     <input type="radio" name="one" id="individual">
                     <label for="radio1">Individual</label>
-                    <img class="icon-information" src="/img/information.png">
+                    <img class="icon-information" src="img/information.png">
                 </div>
                 <div>
                     <input type="radio" name="one" id="business">
                     <label for="radio2">Business</label>
-                    <img class="icon-information" src="/img/information.png">
+                    <img class="icon-information" src="img/information.png">
                 </div>
                 <div>
                     <input type="radio" name="one" id="ira">
                     <label for="radio3">IRA</label>
-                    <img class="icon-information" src="/img/information.png">
+                    <img class="icon-information" src="img/information.png">
                 </div>
                 <div>
                     <input type="radio" name="one" id="trust">
                     <label for="radio4">Trust</label>
-                    <img class="icon-information" src="/img/information.png">
+                    <img class="icon-information" src="img/information.png">
                 </div>
             
                 </fieldset>
