--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
     <form class="form container">
         <section class="left">
-            <img class="logo" src="/img/logo.svg">
-            <img class="bg" src="/img/bg.jpg">
+            <img class="logo" src="img/logo.SVG">
+            <img class="bg" src="img/bg.JPG">
         </section>
         <section class="right">
             <h2 class="title_header_form">Get iintoo it today</h2>
             <p class="text_header_form">There is no charge or obligation upon registration</p>
             <div class="buttons">
                     <div class="button_facebook">
-            <button class="facebook"><img class="image_facebook" src="/img/facebook.svg">Register with Facebook</button>
+            <button class="facebook"><img class="image_facebook" src="img/facebook.SVG">Register with Facebook</button>
                     </div>
                 <span class="or">OR</span>
                 <div class="button_linkedin">
-            <button class="linkedIn"><img class="image_linkedin" src="/img/linkedin.svg">Register with LinkedIn</button>
+            <button class="linkedIn"><img class="image_linkedin" src="img/linkedin.SVG">Register with LinkedIn</button>
                 </div>
                 
         </div>
