--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
     <form class="form container">
         <section class="left">
-            <img class="logo" src="img/logo.SVG">
-            <img class="bg" src="img/bg.JPG">
+            <img src="img/logo.SVG" alt="logo" class="logo">
+            <img src="img/bg.JPG" alt="background" class="bg">
         </section>
         <section class="right">
             <h2 class="title_header_form">Get iintoo it today</h2>
             <p class="text_header_form">There is no charge or obligation upon registration</p>
             <div class="buttons">
                     <div class="button_facebook">
-            <button class="facebook"><img class="image_facebook" src="img/facebook.SVG">Register with Facebook</button>
+            <button class="facebook"><img src="img/facebook.SVG" alt="facebook" class="image_facebook" >Register with Facebook</button>
                     </div>
                 <span class="or">OR</span>
                 <div class="button_linkedin">
-            <button class="linkedIn"><img class="image_linkedin" src="img/linkedin.SVG">Register with LinkedIn</button>
+            <button class="linkedIn"><img src="img/linkedin.SVG" alt="linkedin" class="image_linkedin">Register with LinkedIn</button>
                 </div>
                 
         </div>
@@ -49,22 +49,22 @@
                 <div>
                     <input type="radio" name="one" id="individual">
                     <label for="radio1">Individual</label>
-                    <img class="icon-information" src="img/information.PNG">
+                    <img src="img/information.PNG" alt="information" class="icon-information">
                 </div>
                 <div>
                     <input type="radio" name="one" id="business">
                     <label for="radio2">Business</label>
-                    <img class="icon-information" src="img/information.PNG">
+                    <img src="img/information.PNG" alt="information" class="icon-information">
                 </div>
                 <div>
                     <input type="radio" name="one" id="ira">
                     <label for="radio3">IRA</label>
-                    <img class="icon-information" src="img/information.PNG">
+                    <img src="img/information.PNG" alt="information" class="icon-information">
                 </div>
                 <div>
                     <input type="radio" name="one" id="trust">
                     <label for="radio4">Trust</label>
-                    <img class="icon-information" src="img/information.PNG">
+                    <img src="img/information.PNG" alt="information" class="icon-information">
                 </div>
             
                 </fieldset>
