--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <p class="text_header_form">There is no charge or obligation upon registration</p>
             <div class="buttons">
                     <div class="button_facebook">
-            <button class="facebook"><img src="images/facebook.svg" alt="facebook" class="image_facebook" >Register with Facebook</button>
+            <button class="facebook"><img src="/images/facebook.svg" alt="facebook" class="image_facebook" >Register with Facebook</button>
                     </div>
                 <span class="or">OR</span>
                 <div class="button_linkedin">
-            <button class="linkedIn"><img src="images/linkedin.svg" alt="linkedin" class="image_linkedin">Register with LinkedIn</button>
+            <button class="linkedIn"><img src="/images/linkedin.svg" alt="linkedin" class="image_linkedin">Register with LinkedIn</button>
                 </div>
                 
         </div>
