--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
     <form class="form container">
         <section class="left">
-            <img src="images/logo.svg" alt="logo" class="logo">
-            <img src="images/bg.jpg" alt="background" class="bg">
+            <img src="images/logo.SVG" alt="logo" class="logo">
+            <img src="images/bg.JPG" alt="background" class="bg">
         </section>
         <section class="right">
             <h2 class="title_header_form">Get iintoo it today</h2>
             <p class="text_header_form">There is no charge or obligation upon registration</p>
             <div class="buttons">
                     <div class="button_facebook">
-            <button class="facebook"><img src="/images/facebook.svg" alt="facebook" class="image_facebook" >Register with Facebook</button>
+            <button class="facebook"><img src="images/facebook.SVG" alt="facebook" class="image_facebook" >Register with Facebook</button>
                     </div>
                 <span class="or">OR</span>
                 <div class="button_linkedin">
-            <button class="linkedIn"><img src="/images/linkedin.svg" alt="linkedin" class="image_linkedin">Register with LinkedIn</button>
+            <button class="linkedIn"><img src="images/linkedin.SVG" alt="linkedin" class="image_linkedin">Register with LinkedIn</button>
                 </div>
                 
         </div>
