--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <input type = "checkbox">
                     <label for="checkbox">I agree to the terms and receiving notifications from iintoo <a href="#">View full terms</a></label>
                 </div>
-                <button class="create_account">
+                <button class="create_account" type = "submit">
                     Create Account
                 </button>
             </div>
